# Moodify

./: .cache  .env.example  .gitignore  README.md  app.py  fix_dataset.py  fix_for_curate.py  pyproject.toml  requirements.txt  spotifyclient.py  test.py
data/: test_playlist.csv  train.csv
model/: moodnet.keras
moodify/: auth.py  cli.py  client.py  data.py  model.py  recommender.py
templates/: add_to_existing_playlist.html  added_to_playlist.html  create_playlist.html  enter_seeds.html  index.html  login.html  playlist_created.html  playlist_info.html  playlist_mood.html  playlists.html  similar_songs_found.html
